akdemik_improved.html

--- a/akdemik_improved.html
+++ b/akdemik_improved.html
@@ -286,7 +286,7 @@
                     </div>
                 </div>
                 <div class="hidden lg:flex items-center space-x-8">
-                    <a href="index.html" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">🏠 Beranda</a>
+                    <a href="index.html#home" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">🏠 Beranda</a>
                     <div class="relative group">
                         <button class="nav-link text-gray-700 hover:text-red-400 font-medium flex items-center">
                             👥 Profil <i class="fas fa-chevron-down ml-1 text-xs"></i>
@@ -299,14 +299,14 @@
                         </div>
                     </div>
                     <div class="relative group">
-                        <button class="nav-link text-red-400 font-medium flex items-center">
+                        <button class="nav-link text-gray-700 hover:text-red-400 font-medium flex items-center">
                             📚 Akademik <i class="fas fa-chevron-down ml-1 text-xs"></i>
                         </button>
                         <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
-                            <a href="#programs" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Program Unggulan</a>
-                            <a href="#curriculum" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Kurikulum</a>
-                            <a href="#teachers" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Tenaga Pengajar</a>
-                            <a href="#achievements" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Prestasi</a>
+                            <a href="akdemik_improved.html#programs" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Program Unggulan</a>
+                            <a href="akdemik_improved.html#curriculum" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Kurikulum</a>
+                            <a href="akdemik_improved.html#teachers" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Tenaga Pengajar</a>
+                            <a href="akdemik_improved.html#achievements" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Prestasi</a>
                         </div>
                     </div>
                     <div class="relative group">
@@ -314,13 +314,13 @@
                             🎓 Siswa <i class="fas fa-chevron-down ml-1 text-xs"></i>
                         </button>
                         <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
-                            <a href="siswa.html#extracurricular" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Ekstrakurikuler</a>
-                            <a href="siswa.html#student-council" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">OSIS</a>
-                            <a href="siswa.html#alumni" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Alumni</a>
-                            <a href="siswa.html#gallery" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Galeri</a>
+                            <a href="siswa_improved.html#extracurricular" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Ekstrakurikuler</a>
+                            <a href="siswa_improved.html#student-council" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">OSIS</a>
+                            <a href="siswa_improved.html#alumni" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Alumni</a>
+                            <a href="siswa_improved.html#gallery" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Galeri</a>
                         </div>
                     </div>
-                    <a href="berita.html#news" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📰 Berita</a>
+                    <a href="berita_improved.html#news" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📰 Berita</a>
                     <a href="kontak_improved.html#contact" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">💬 Kontak</a>
                     <button onclick="showLoginModal()" class="btn-primary">
                         <i class="fas fa-cog mr-2"></i>Admin
@@ -774,4 +774,5 @@
     </script>
 </body>
 </html>
+
 
