--- a/kontak_improved.html
+++ b/kontak_improved.html
@@ -282,16 +282,16 @@
                     </div>
                 </div>
                 <div class="hidden lg:flex items-center space-x-8">
-                    <a href="index.html" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">🏠 Beranda</a>
+                    <a href="index.html#home" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">🏠 Beranda</a>
                     <div class="relative group">
                         <button class="nav-link text-gray-700 hover:text-red-400 font-medium flex items-center">
                             👥 Profil <i class="fas fa-chevron-down ml-1 text-xs"></i>
                         </button>
                         <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
-                            <a href="profil.html#about" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Tentang Sekolah</a>
-                            <a href="profil.html#vision" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Visi & Misi</a>
-                            <a href="profil.html#history" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Sejarah</a>
-                            <a href="profil.html#facilities" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Fasilitas</a>
+                            <a href="profil_improved.html#about" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Tentang Sekolah</a>
+                            <a href="profil_improved.html#vision" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Visi & Misi</a>
+                            <a href="profil_improved.html#history" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Sejarah</a>
+                            <a href="profil_improved.html#facilities" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Fasilitas</a>
                         </div>
                     </div>
                     <div class="relative group">
@@ -299,10 +299,10 @@
                             📚 Akademik <i class="fas fa-chevron-down ml-1 text-xs"></i>
                         </button>
                         <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
-                            <a href="akdemik.html#programs" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Program Unggulan</a>
-                            <a href="akdemik.html#curriculum" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Kurikulum</a>
-                            <a href="akdemik.html#teachers" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Tenaga Pengajar</a>
-                            <a href="akdemik.html#achievements" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Prestasi</a>
+                            <a href="akdemik_improved.html#programs" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Program Unggulan</a>
+                            <a href="akdemik_improved.html#curriculum" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Kurikulum</a>
+                            <a href="akdemik_improved.html#teachers" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Tenaga Pengajar</a>
+                            <a href="akdemik_improved.html#achievements" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Prestasi</a>
                         </div>
                     </div>
                     <div class="relative group">
@@ -310,14 +310,14 @@
                             🎓 Siswa <i class="fas fa-chevron-down ml-1 text-xs"></i>
                         </button>
                         <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
-                            <a href="siswa.html#extracurricular" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Ekstrakurikuler</a>
-                            <a href="siswa.html#student-council" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">OSIS</a>
-                            <a href="siswa.html#alumni" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Alumni</a>
-                            <a href="siswa.html#gallery" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Galeri</a>
+                            <a href="siswa_improved.html#extracurricular" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Ekstrakurikuler</a>
+                            <a href="siswa_improved.html#student-council" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">OSIS</a>
+                            <a href="siswa_improved.html#alumni" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Alumni</a>
+                            <a href="siswa_improved.html#gallery" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Galeri</a>
                         </div>
                     </div>
-                    <a href="berita.html#news" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📰 Berita</a>
-                    <a href="#contact" class="nav-link text-red-400 font-medium transition">💬 Kontak</a>
+                    <a href="berita_improved.html#news" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📰 Berita</a>
+                    <a href="kontak_improved.html#contact" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">💬 Kontak</a>
                     <button onclick="showLoginModal()" class="btn-primary">
                         <i class="fas fa-cog mr-2"></i>Admin
                     </button>
