--- a/siswa_improved.html
+++ b/siswa_improved.html
@@ -162,7 +162,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
-    <nav class="bg-white/95 backdrop-blur-md shadow-lg fixed w-full top-0 z-50">
+   <nav class="bg-white/95 backdrop-blur-md shadow-lg fixed w-full top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
@@ -177,19 +177,46 @@
                     </div>
                 </div>
                 <div class="hidden lg:flex items-center space-x-8">
-                    <a href="index.html" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">🏠 Beranda</a>
-                    <a href="profil_improved.html" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">👥 Profil</a>
-                    <a href="akademik_improved.html" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📚 Akademik</a>
-                    <a href="#" class="nav-link text-red-400 font-medium transition">🎓 Siswa</a>
-                    <a href="berita.html#news" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📰 Berita</a>
+                    <a href="index.html#home" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">🏠 Beranda</a>
+                    <div class="relative group">
+                        <button class="nav-link text-gray-700 hover:text-red-400 font-medium flex items-center">
+                            👥 Profil <i class="fas fa-chevron-down ml-1 text-xs"></i>
+                        </button>
+                        <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
+                            <a href="profil_improved.html#about" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Tentang Sekolah</a>
+                            <a href="profil_improved.html#vision" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Visi & Misi</a>
+                            <a href="profil_improved.html#history" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Sejarah</a>
+                            <a href="profil_improved.html#facilities" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Fasilitas</a>
+                        </div>
+                    </div>
+                    <div class="relative group">
+                        <button class="nav-link text-gray-700 hover:text-red-400 font-medium flex items-center">
+                            📚 Akademik <i class="fas fa-chevron-down ml-1 text-xs"></i>
+                        </button>
+                        <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
+                            <a href="akdemik_improved.html#programs" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Program Unggulan</a>
+                            <a href="akdemik_improved.html#curriculum" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Kurikulum</a>
+                            <a href="akdemik_improved.html#teachers" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Tenaga Pengajar</a>
+                            <a href="akdemik_improved.html#achievements" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Prestasi</a>
+                        </div>
+                    </div>
+                    <div class="relative group">
+                        <button class="nav-link text-gray-700 hover:text-red-400 font-medium flex items-center">
+                            🎓 Siswa <i class="fas fa-chevron-down ml-1 text-xs"></i>
+                        </button>
+                        <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 border border-gray-100">
+                            <a href="siswa_improved.html#extracurricular" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-t-xl">Ekstrakurikuler</a>
+                            <a href="siswa_improved.html#student-council" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">OSIS</a>
+                            <a href="siswa_improved.html#alumni" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400">Alumni</a>
+                            <a href="siswa_improved.html#gallery" class="block px-4 py-3 text-gray-700 hover:bg-red-50 hover:text-red-400 rounded-b-xl">Galeri</a>
+                        </div>
+                    </div>
+                    <a href="berita_improved.html#news" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">📰 Berita</a>
                     <a href="kontak_improved.html#contact" class="nav-link text-gray-700 hover:text-red-400 font-medium transition">💬 Kontak</a>
                     <button onclick="showLoginModal()" class="btn-primary">
                         <i class="fas fa-cog mr-2"></i>Admin
                     </button>
                 </div>
-            </div>
-        </div>
-    </nav>
 
     <!-- Main Content -->
     <div id="main-content">
@@ -485,4 +512,5 @@
     </script>
 </body>
 </html>
+
 
